src/objects/Weekly_Time_Sheet__c.object
<CustomObject>
    <description>Will group time entries by week (Monday to Sunday) and by Owner (User)</description>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Billable_Amount__c</fullName>
        <label>Total Billable Amount</label>
        <summarizedField>Time_Entry__c.Billable_Amount__c</summarizedField>
        <summaryForeignKey>Time_Entry__c.Weekly_Time_Sheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Hours_for_Week__c</fullName>
        <description>sum up the total hours for the week</description>
        <label>Total Hours for Week</label>
        <summarizedField>Time_Entry__c.Hours__c</summarizedField>
        <summaryForeignKey>Time_Entry__c.Weekly_Time_Sheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Week_Ending__c</fullName>
        <label>Week Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_Starting__c</fullName>
        <label>Week Starting</label>
        <type>Date</type>
    </fields>
    <label>Weekly Time Sheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Week_Starting__c</columns>
        <columns>Week_Ending__c</columns>
        <columns>Total_Hours_for_Week__c</columns>
        <columns>Total_Billable_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Weekly Time Sheet</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weekly Time Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>